syntax = "proto3";

package io.vertx.tests.merge;

option java_package = "io.vertx.tests.merge";
option java_outer_classname = "MergeProto";

message Container {
  int32 int32 = 1;
  int64 int64 = 2;
  repeated int32 repeated_int32 = 3;
  Nested nested = 4;
  oneof oneOf {
    Nested oneOfNested = 5;
    int32 oneOfInt32 = 6;
  }
}

message Nested {
  int32 int32 = 1;
  int64 int64 = 2;
  repeated int32 repeated_int32 = 3;
}
